# affign

./: .gitmodules  LICENSE  README.md  licenseMIT.txt  licenseOPENCV.txt
include/: affignaligner.h  affignexcept.h  affignmain.h  aligner.h  alignerconfiguration.h  command.h  commandparser.h  configuration.h  consolelogger.h  dataextractor.h  except.h  extension.h  imagedata.h  imagegrabber.h  imagesaver.h  landmarkextractor.h  logger.h  main.h  mediamaker.h  mediasaver.h  processdata.h  processor.h  transformprocessor.h  videosaver.h
resources/: affignlogo.xpm  affignresources.rc  licenseDLIB.txt
source/: .CMakeLists.txt.swp  CMakeLists.txt  affignaligner.cpp  affignaligner.h  affignexcept.cpp  affignmain.cpp  affignmain.h  aligner.cpp  command.cpp  commandparser.cpp  consolelogger.cpp  except.cpp  imagesaver.cpp  landmarkextractor.cpp  main.cpp  mediamaker.cpp  mediasaver.cpp  transformprocessor.cpp  videosaver.cpp
